--- a/scss/custome.scss
+++ b/scss/custome.scss
@@ -12,6 +12,10 @@
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.scss";
+
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
 // Then add additional custom code here
 
 body {
@@ -19,4 +23,80 @@ body {
   font-weight: 400;
   background-color: #38373b;
   color: #ffffff;
+}
+
+header {
+  position: relative;
+  min-height: 100vh;
+  background-image: url("../images/Hilite.jpg");
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+  }
+
+  .navbar {
+    background-color: rgba(0, 0, 0, 0.6);
+    .brand {
+      font-size: 2rem;
+      color: $primary;
+    }
+
+    .nav-link:hover,
+    .nav-link:focus {
+      transition: border 0.2s;
+      border-bottom: 1px solid #ffffff;
+      margin-bottom: -1px;
+    }
+  }
+
+  .header-banner {
+    min-height: 100vh;
+
+    .btn {
+      font-size: 1.5rem;
+      border-radius: 2rem;
+    }
+  }
+
+  .header-content {
+    z-index: 2;
+  }
+}
+
+main {
+  section {
+    padding-top: 75px;
+  }
+  .card {
+    background-color: #464647;
+    color: inherit;
+  }
+}
+
+#c1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#im1 {
+  max-width: 50%;
+}
+
+#id1 {
+}
+
+#c2 {
+  display: flex;
+  align-items: center;
+  justify-content: left;
 }
