--- a/scss/custome.scss
+++ b/scss/custome.scss
@@ -26,12 +26,12 @@ body {
 }
 
 header {
-  position: relative;
-  min-height: 100vh;
-  background-image: url("../images/Hilite.jpg");
-  background-repeat: no-repeat;
+  // position: relative;
+  // min-height: 100vh;
+  /* background-image: url("../images/Hilite.jpg"); */
+  /*  background-repeat: no-repeat;
   background-position: center top;
-  background-size: cover;
+  background-size: cover; */
 
   .overlay {
     position: absolute;
@@ -86,6 +86,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: justify;
 }
 
 #im1 {
@@ -99,4 +100,14 @@ main {
   display: flex;
   align-items: center;
   justify-content: left;
+}
+
+#n1 {
+  padding-bottom: 1rem;
+}
+
+@media screen and (max-width: 576px) {
+  #n1 {
+    padding-bottom: 0rem;
+  }
 }
