--- a/scss/custome.css
+++ b/scss/custome.css
@@ -20277,3 +20277,16 @@ main .card {
     padding-bottom: 0rem;
   }
 }
+#c3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+}
+
+#c4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+}
