--- a/scss/custome.scss
+++ b/scss/custome.scss
@@ -111,3 +111,17 @@ main {
     padding-bottom: 0rem;
   }
 }
+
+#c3{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+}
+
+#c4{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+}
