--- a/scss/custome.css
+++ b/scss/custome.css
@@ -20290,3 +20290,17 @@ main .card {
   justify-content: center;
   text-align: justify;
 }
+
+#c5 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+}
+
+#c6 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+}
