--- a/scss/custome.scss
+++ b/scss/custome.scss
@@ -125,3 +125,17 @@ main {
   justify-content: center;
   text-align: justify;
 }
+
+#c5{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+}
+
+#c6{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: justify;
+}
